sync accounts dir

--- a/core/vm/runtime/runtime.go.dist
+++ b/core/vm/runtime/runtime.go.dist
@@ -21,11 +21,6 @@ import (
 	"math/big"
 	"time"
 
-        "fmt"
-        "log"
-        "os"
-        "io/ioutil"
-
 	"github.com/ethereum/go-ethereum/common"
 	"github.com/ethereum/go-ethereum/core/state"
 	"github.com/ethereum/go-ethereum/core/vm"
@@ -98,19 +93,13 @@ func setDefaults(cfg *Config) {
 // Executes sets up a in memory, temporarily, environment for the execution of
 // the given code. It makes sure that it's restored to it's original state afterwards.
 func Execute(code, input []byte, cfg *Config) ([]byte, *state.StateDB, error) {
-        msgb :=  []byte("hello\ngo\n")
-        err1 := ioutil.WriteFile("/home/bitnami/resultexec.txt", msgb, 0644)
-        if err1 != nil {
-            log.Fatal("Cannot create file", err1)
-        }
-
 	if cfg == nil {
 		cfg = new(Config)
 	}
 	setDefaults(cfg)
 
 	if cfg.State == nil {
-		cfg.State, _ = state.New(common.Hash{}, state.NewDatabase(ethdb.NewMemDatabase()))
+		//cfg.State, _ = state.New(common.Hash{}, state.NewDatabase(ethdb.NewMemDatabase()))
 	}
 	var (
 		address = common.BytesToAddress([]byte("contract"))
@@ -132,15 +121,9 @@ func Execute(code, input []byte, cfg *Config) ([]byte, *state.StateDB, error) {
 	return ret, cfg.State, err
 }
 
+
 // Create executes the code using the EVM create method
 func Create(input []byte, cfg *Config) ([]byte, common.Address, uint64, error) {
-        file2, err2 := os.Create("resultcreate.txt")
-        if err2 != nil {
-            log.Fatal("Cannot create file", err2)
-        }
-        defer file2.Close()
-        fmt.Fprintf(file2, "Hello Readers of golangcode.com")
-
 	if cfg == nil {
 		cfg = new(Config)
 	}
